--- a/pom.xml
+++ b/pom.xml
@@ -25,16 +25,6 @@
 	</properties>
 
 	<dependencies>
-		<!-- Add typical dependencies for a web application -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<!-- Add freemarker/ftl template support -->		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-freemarker</artifactId>
-		</dependency>
 		<!-- Add JPA support -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -65,10 +55,34 @@
 		</dependency>
 
 
-
-
-
+	<!-- start microservice dependencies -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+		</dependency>
+	<!-- end microservice dependencies -->
+	
 	</dependencies>
+
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Camden.SR3</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+
+
 
 	<build>
 		<plugins>
@@ -77,7 +91,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <jvmArguments>
-                        -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=9898
+                        -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=9895
                     </jvmArguments>
                 </configuration>
                 <executions>
