--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 
 
 
-server.port=8080
 server.contextPath=/MarketPlace
 datasource.sampleapp.url=jdbc:postgresql://localhost:5432/postgres
 datasource.sampleapp.username=postgres
@@ -13,3 +12,18 @@ datasource.sampleapp.hibernate.hbm2ddl.method=update
 datasource.sampleapp.hibernate.show_sql=true
 datasource.sampleapp.hibernate.format_sql=true
 datasource.sampleapp.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+
+### Spring properties
+# Service registers under this name
+spring.application.name: market-microservice-producer
+
+# Discovery Server Access
+eureka.client.serviceUrl.defaultZone: http://localhost:1111/eureka/
+
+# HTTP Server (Tomcat) Port
+server.port: 2222
+
+# Disable Spring Boot's "Whitelabel" default error page, so we can use our own
+error.whitelabel.enabled: false
