--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 
 server.contextPath=/MarketPlace
 datasource.sampleapp.url=jdbc:postgresql://localhost:5432/postgres
-datasource.sampleapp.username=postgres
-datasource.sampleapp.password=postgres
+datasource.sampleapp.username=daii
+datasource.sampleapp.password=daii
 datasource.sampleapp.driverClassName=org.postgresql.Driver
 datasource.sampleapp.defaultSchema=
 datasource.sampleapp.maxPoolSize=10
